# Departure-Board-Editor-Simulation

./: CMakeLists.txt  GEMINI.md  README.md  departure_board_editor.c  globals_and_structures.h  main.c  Звіт.md
Struct+File/: CMakeLists.txt  db_functions.c  db_functions.h  db_structures.h  departure_board_editor.c  departure_board_editor.h  globals_and_structures.h  help_functions.c  main.c
Struct+File/functions/include/: display.h  help_functions.h  input_output.h  many_sprites.h  one_sprite.h
Struct+File/functions/src/: display.c  help_functions.c  input_output.c  many_sprites.c  one_sprite.c
functions/include/: help_functions.h  input_output.h  many_sprites.h  one_sprite.h
functions/src/: many_sprites.c  one_sprite.c
